feat: 채팅 환경설정

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,7 @@
   	</init-param>
   	<!-- 웹애플리케이션이 시작할 때 서블릿 객체 생성 -->
   	<load-on-startup>1</load-on-startup>
+  	<async-supported>true</async-supported>
   	<!-- multipart 파싱 -->
   	<multipart-config>
   		<!-- 임시 파일이 저장될 디렉토리  -->
