feat : 세션만료 기준으로 접속여부 판단기능 추가

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -77,4 +77,12 @@
   	<!-- 모든 요청을 DispatcherServlet이 처리 -->
   	<url-pattern>/</url-pattern>
   </servlet-mapping>
+  <!-- 세션 만료시 이벤트 추가를 위한 listener -->
+  <listener>
+      <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
+  </listener>
+  <!-- 세션 만료시간 설정(단위: 분) -->
+  <session-config>
+    <session-timeout>30</session-timeout> 
+  </session-config>
 </web-app>
